# ds-caselaw-data-enrichment-service

./: .env.e2e.example  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-git-secrets  .terraform.lock.hcl  CHANGELOG.md  DESCRIPTION.md  LICENSE.md  Makefile  README.md  README_database.txt  URIdescriptor.json  bulk_process_citations.py  conftest.py  demo_bulk_process_citations.py  demo_process_citations.py  docker-compose.yml  main.py  main.tf  matched_rules.csv  provider.tf  pyproject.toml  pytest.ini  renovate.json  requirements.txt  s3.tf  setup.cfg  test_manifest.py  tuples.json  tuples.jsonl  tuples.txt  tuples_test.json  validate_match_csv.py  variables.tf
.github/: pull_request_template.md  release.yml
.github/workflows/: apply.yml  cd_deploy_only_staging.yml  cd_deploy_staging_then_prod.yml  ci.yml  ci_lint_and_test.yml  ci_prod.yml  ci_staging.yml  deploy_single_environment.yml  prod_build.yml  production.yml  production_build.yml  production_tf.yml  staging.yml  staging_build.yml  staging_tf.yml  terraform.yml  terraform_plan.yml  tf_plan.yml
2020/: 2020-ewca-1-civ.xml  2020-ewca-1001-civ.xml  2020-ewca-1002-civ.xml  2020-ewca-1003-civ.xml  2020-ewca-1004-civ.xml  2020-ewca-1005-civ.xml  2020-ewca-1010-civ.xml  2020-ewca-1015-civ.xml  2020-ewca-1017-civ.xml  2020-ewca-1018-civ.xml  2020-ewca-1027-civ.xml  2020-ewca-103-civ.xml  2020-ewca-1030-civ.xml  2020-ewca-1031-civ.xml  2020-ewca-1032-civ.xml  2020-ewca-1037-civ.xml  2020-ewca-1038-civ.xml  2020-ewca-104-civ.xml  2020-ewca-1046-civ.xml  2020-ewca-1057-civ.xml  2020-ewca-1058-civ.xml  2020-ewca-1064-civ.xml  2020-ewca-107-civ.xml  2020-ewca-1070-civ.xml  2020-ewca-1072-civ.xml  2020-ewca-1074-civ.xml  2020-ewca-1075-civ.xml  2020-ewca-108-civ.xml  2020-ewca-1088-civ.xml  2020-ewca-109-civ.xml  2020-ewca-11-civ.xml  2020-ewca-1104-civ.xml  2020-ewca-1105-civ.xml  2020-ewca-1112-civ.xml  2020-ewca-112-civ.xml  2020-ewca-1128-civ.xml  2020-ewca-114-civ.xml  2020-ewca-1151-civ.xml  2020-ewca-1175-civ.xml  2020-ewca-1176-civ.xml  (+351 more)
abbreviation_extraction/: abbreviations.py  abbreviations_matcher.py  ewhc_comm_2022_1599.xml  helper.py  main.py  requirements.txt
abbreviation_extraction/determine_replacements_abbreviations/: index.py
abbreviations/: abbreviations.py
benchmarking/: benchmark.ipynb  benchmark.json  benchmark_final.ipynb  benchmark_ignore.ipynb  benchmarking.ipynb  missed_rules.csv
benchmarking/tna-sample/: vcite-sample-caselaw-analysis.csv
caselaw-ontology/: README.markdown
caselaw-ontology/ontology/: caselaw.ttl  uk-court-system.ttl
caselaw_extraction/: abbreviations.py  analysis.py  caselaw_matcher.py  correction_strategies.py  db_connection.py  helper.py  legislation_matcher_hybrid.py  main.py  manifest.db  replacer.py  requirements.txt  tests.ipynb
caselaw_extraction/rules/: 2022_04_05_Citation_Manifest.csv  2022_04_08_Citation_Manifest.csv  citation_patterns.jsonl
caselaw_extraction/tests/: test_citation_matcher.py
database/: db_connection.py  requirements.txt
docs/: README.md  abbreviation-annotator.md  case-law-annotator.md  index.md  pipeline-walkthrough.md  the-replacers.md  vcite.md
docs/caselaw/: adding-new-citation-rules.md  case-law-annotator.md  updating-the-rules-manifest.md
docs/legislation/: legislation-annotator.md  legislative-provision-annotator.md  oblique-references.md
lambda/db_backup/: dockerfile  index.py  requirements.txt
lambda/determine_legislation_provisions/: Dockerfile  index.py
lambda/determine_oblique_references/: Dockerfile  index.py
lambda/determine_replacements_abbreviations/: Dockerfile  index.py
lambda/determine_replacements_caselaw/: Dockerfile  index.py
lambda/determine_replacements_legislation/: Dockerfile  index.py
lambda/extract_judgement_contents/: index.py  requirements.txt
legislation_extraction/: legislation_hybrid_matching.py  legislation_matcher_hybrid.py  legislation_matching.py  requirements.txt
legislation_processing/: legislation_collection.py  legislation_fuzzy_matching.py  legislation_matcher_hybrid.py  legislation_matching.py  legislation_update_lookup.py  requirements.txt
legislation_provisions_extraction/: demo_main.py  legislation_provisions.py  legislation_provisions_v.0.2.py  oblique_provisions_replacer.py  requirements.txt
modules/data/: data.tf  (+7 more)
network/: main.tf  variables.tf
oblique_references/: enrich_oblique_references.py  oblique_references.py  requirements.txt
replacer/: replacer.py  requirements.txt  second_stage_replacer.py
rules/: 2022_02_08_Citation_Manifest.csv  2022_02_16_Citation_Manifest.csv  2022_02_24_Citation_Manifest.csv  2022_04_08_Citation_Manifest.csv  citation_patterns.jsonl  correction_strategies.py
scripts/: assemble_lambda_contexts.sh  create_test.sh  get_schema  make_fake_secrets.sh  pyproject.toml  run_test.sh  set_test_env.sh  setup-localstack.sh  sqs-publish-notification.sh  test  test_output.sh  test_with_postgres.sh  validate_local
src/lambdas/fetch_xml/: dockerfile  index.py  pyproject.toml  requirements.txt
src/utils/: 2022_11_04_Court_Mapping.csv  2022_12_05_Court_Mapping.csv  compare_xml.py  custom_types.py  environment_helpers.py  helper.py  initialise_db.py  proper_xml.py  pyproject.toml  requirements.txt  secrets_manager.py  types.py  validate_patterns.py
src/utils/tests/: compare_xml.py  conftest.py  test_environment_helpers.py  test_initialise_db.py  test_proper_xml.py
src/utils/utils/: compare_xml.py  environment_helpers.py  helper.py  initialise_db.py  proper_xml.py
terraform/: .terraform-docs.yml  .terraform-version  .terraform.lock.hcl  README.md  main.tf  s3.tf  variables.tf
test_files/: ewca_civ_2025_673-enriched.xml  ewca_civ_2025_673-original.xml
tests/: _localtestfile.txt  requirements.txt  runner.py  test_case_citations.py  test_citation_matcher.py  test_citation_replacer.py  test_manifest.py  test_replacer.py  test_xml_parser.py
tools/: see_prod.html
utils/: 2022_11_04_Court_Mapping.csv  2022_12_05_Court_Mapping.csv  demo_text.py  get_citation_types.py  helper.py  requirements.txt
workflows/: terraform.yml
(+697 files in other folders)
