[project]
requires-python = ">=3.12"

[tool.pytest.ini_options]
markers = ["integration: requires access to legislation SPARQL endpoint"]
pythonpath = "src"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040", "S320"] # long lines, fstrings in logs, magic values, consider not concat, mutable classbits, type instead of TypeAlias, parsing in lxml
extend-select = ["W", "B", "Q", "C90", "I", "UP", "YTT", "ASYNC", "S", "BLE", "A"]
# extend-select = ["COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA",
#                  "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "PTH",
#                  "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
unfixable = ["ERA"]

# things skipped:
# N: naming, possibly good
# D: docstrings missing throughout
# ANN: annotations missing throughout
# FBT: not convinced boolean trap worth auto-banning.
# CPY: copyright at top of each file
# G: logging warnings -- fstrings bad?
# ARG: sometimes you need to accept arguments.
# TD: somewhat finicky details about formatting TODOs
# FIX: flags todos: possible to add -- skipped for now
# ERA: lots of false positives, not a good autofix
# PD, NPY, AIR: ignored, panda / numpy / airflow specific
# FURB: not yet out of preview

[tool.ruff.lint.extend-per-file-ignores]
"*/tests/*" = ["S101"]
