[project]
name = "tests"
version = "6.0.1"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
markers = ["integration: requires access to legislation SPARQL endpoint"]
pythonpath = "src"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040", "S320"] # long lines, fstrings in logs, magic values, consider not concat, mutable classbits, type instead of TypeAlias, parsing in lxml
extend-select = ["W", "B", "Q", "C90", "I", "UP", "YTT", "ASYNC", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE",
                 "FA", "ISC", "ICN", "G"]
# extend-select = ["INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "PTH",
#                  "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
unfixable = ["ERA"]

# things skipped:
# N: naming, possibly good
# D: docstrings missing throughout
# ANN: annotations missing throughout
# FBT: not convinced boolean trap worth auto-banning.
# CPY: copyright at top of each file
# G: logging warnings -- fstrings bad?
# ARG: sometimes you need to accept arguments.
# TD: somewhat finicky details about formatting TODOs
# FIX: flags todos: possible to add -- skipped for now
# ERA: lots of false positives, not a good autofix
# PD, NPY, AIR: ignored, panda / numpy / airflow specific
# FURB: not yet out of preview

[tool.ruff.lint.extend-per-file-ignores]
"*/tests/*" = ["S101"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.8.2"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"
beautifulsoup4 = "^4.12.3"
spaczz = "^0.6.1"
lxml = "^5.3.0"
testing-postgresql = "^1.3.0"
sqlalchemy = "^2.0.36"
coverage = "^7.6.7"
boto = "^2.49.0"
moto = "^5.0.21"
mock = "^5.1.0"
pytest = "^8.3.3"
pytest-postgresql = "^7.0.0"
psycopg = "^3.2.3"
sparqlwrapper = "^2.0.0"
python-dotenv = "^1.0.1"
rapidfuzz = "^3.10.1"
ds-caselaw-marklogic-api-client = "^37.0.0"
aws-lambda-powertools = "^3.3.0"
pytest-socket = "^0.7.0"
pytest-env = "^1.1.5"
boto3-stubs = {extras = ["essential"], version = "^1.35.67"}
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
