[project]
version="6.0.1"
name="data-enrichment"
requires-python = ">=3.13,<3.14"

[tool.pytest.ini_options]
markers = ["integration: requires access to legislation SPARQL endpoint"]
pythonpath = "src"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040"]
extend-select = ["W", "B", "Q", "C90", "I", "UP", "YTT", "ASYNC", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE",
                 "FA", "ISC", "ICN", "G"]

[tool.ruff.lint.extend-per-file-ignores]
"*/tests/*" = ["S101"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.poetry]
name = "data-enrichment"
version = "6.0.1"
description = "Caselaw data enrichment service"
authors = ["David McKee <david.mckee@dxw.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
pandas = "3.0.3"
beautifulsoup4 = "4.15.0"
spaczz = "0.6.1"
lxml = "6.1.1"
sqlalchemy = "2.0.51"
coverage = "7.15.0"
boto = "2.49.0"
psycopg = "3.3.4"
sparqlwrapper = "2.0.0"
python-dotenv = "1.2.2"
rapidfuzz = "3.14.5"
python = ">=3.13,<3.14"
boto3 = "1.43.44"
botocore = "1.43.44"
aws-lambda-powertools = "3.31.0"
psycopg2-binary = "2.9.12"

# Lambda-specific dependency groups (supplementing top-level dependencies)
[tool.poetry.group.enrichment-lambda.dependencies]
spacy = "3.8.14"
# this is because of https://github.com/explosion/spaCy/issues/13971 and is "temporary"
click = "8.4.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}
spaczz = "0.6.1"
beautifulsoup4 = "4.15.0"
lxml = "6.1.1"
requests = "2.34.2"
urllib3 = "2.7.0"

[tool.poetry.group.legislation-lambda.dependencies]
sparqlwrapper = "2.0.0"

[tool.poetry.group.rules-lambda.dependencies]
spacy = "3.8.14"
# this is because of https://github.com/explosion/spaCy/issues/13971 and is "temporary"
click = "8.4.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}

[tool.poetry.group.backup-lambda.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "9.1.1"
pytest-postgresql = "8.1.0"
pytest-env = "1.6.0"
freezegun = "1.5.5"
pytest-socket = "0.8.0"
testcontainers = "4.14.2"
pytest-cov = "7.1.0"
moto = "5.2.2"
mock = "5.2.0"
mypy = "2.2.0"
ds-caselaw-marklogic-api-client = "47.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
