[tool.poetry]
name = "fetch-xml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "*.py" }
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.11"
aws-lambda-powertools = "^2.30.2"
utils = {path = "../../utils"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
